# tritonscope

./: .gitignore  CONTRIBUTING.md  FINAL_SUMMARY.txt  README.md  README_FINAL.md  TEST_RESULTS.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  DIAGNOSTICS.md
examples/: matmul_phase2.py  register_hog.py  softmax.py  softmax_phase2.py
tests/: test_phase0.py  test_phase1.py  test_phase2.py  test_phase3_7.py
tritonscope/: __init__.py  __version__.py  cli.py  compatibility.py  hardware.py  pipeline.py
tritonscope/analyzers/: __init__.py  ast_analyzer.py  base.py  runtime_analyzer.py
tritonscope/core/: __init__.py  launcher.py  loader.py
tritonscope/output/: __init__.py  json_formatter.py  markdown_formatter.py  terminal_formatter.py
